--- a/Asteroids Game/Asteroids Game.vcxproj
+++ b/Asteroids Game/Asteroids Game.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Asteroids Game.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="olc.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
