--- a/Asteroids Game/Asteroids Game.vcxproj.filters
+++ b/Asteroids Game/Asteroids Game.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="olc.h">
+      <Filter>Pliki zasobów</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
