--- a/Asteroids Game/Asteroids Game.vcxproj.filters
+++ b/Asteroids Game/Asteroids Game.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="olc.h">
-      <Filter>Pliki zasobów</Filter>
+      <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
